[3618] fix Disabled tests + remove some TODO MSA + update some network files
Signed-off-by: Matthieu SAUR <matthieu.saur@rte-france.com>